RE #75: - Added 6 new icons including book-open and status - Moved all custom variables into new file inside admin-ui apps folder - Defined 8 levels of drop shadow and replaced old instances - Card-header in sidebar no longer has drop shadow since sticky by default removed - Text-muted and text-light fine tuned - Badge vertically aligned in middle, tested badge with icons - Icon vertically aligned using margins - Styled img-thumbnail for possible use - Tons of fine tuning

--- a/src/components/list-group/styles.scss
+++ b/src/components/list-group/styles.scss
@@ -13,6 +13,11 @@
   &:active {
     color: $body-color;
   }
+
+  &.disabled,
+  &:disabled {
+    color: $text-muted;
+  }
 }
 
 .list-group-item-text {
