--- a/src/components/main-nav/styles.scss
+++ b/src/components/main-nav/styles.scss
@@ -253,13 +253,13 @@
     border-radius: $border-radius-lg;
     background: $white;
     background-clip: padding-box;
-    box-shadow: 0 1px 14px -2px $gray-rgba-600, 0 0 0 1px rgba($black, .05);
+    box-shadow: 0 1px 16px -2px $gray-rgba-600, 0 0 0 1px rgba($black, .05);
     transform: none !important;
   }
   .navbar-main-wrapper .navbar-nav .nav-dropdown-menu {
     margin: 0;
     border-radius: 0 0 $border-radius-lg $border-radius-lg;
-    box-shadow: 0 10px 14px -7px $gray-rgba-600;
+    box-shadow: 0 10px 16px -8px $gray-rgba-600;
   }
   .navbar-dark .navbar-nav .nav-dropdown-menu {
     border: none;
